[project]
name = "nas-tools"
version = "3.2.3"
description = "NAS媒体库管理工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "nas-tools", email = "patricialee320@gmail.com"}
]
dependencies = [
    "APScheduler>=3.10.0",
    "DBUtils>=3.0.2",
    "Flask>=2.2.3",
    "Flask-Login>=0.6.2",
    "Jinja2>=3.1.2",
    "PyJWT>=2.6.0",
    "PyMySQL>=1.0.2",
    "PyVirtualDisplay>=3.0",
    "SQLAlchemy>=2.0.4",
    "Werkzeug>=2.2.3",
    "alembic>=1.9.4",
    "beautifulsoup4>=4.11.1",
    "better-exceptions>=0.3.3",
    "cacheout>=0.14.1",
    "cachetools>=5.3.0",
    "cn2an>=0.5.17",
    "cryptography>=39.0.1",
    "dateparser>=1.1.4",
    "fast-bencode>=1.1.3",
    "flask-compress>=1.13",
    "flask-restx>=1.0.6",
    "flask-sock>=0.6.0",
    "func_timeout>=4.3.5",
    "icalendar>=5.0.4",
    "influxdb>=5.3.1",
    "iso639>=0.1.4",
    "jsonpath>=0.82",
    "loguru>=0.6.0",
    "lxml>=4.9.1",
    "openai>=0.27.2",
    "parse>=1.19.0",
    "parsel>=1.6.0",
    "pillow>=9.5.0",
    "psutil>=5.9.4",
    "pycryptodome>=3.15.0",
    "pymongo>=4.2.0",
    "pyperclip>=1.8.2",
    "pypushdeer>=0.0.3",
    "pyquery>=1.4.3",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.20.0",
    "python_hosts>=1.0.3",
    "pytz>=2022.2.1",
    "redis>=3.5.3",
    "redis-py-cluster>=2.1.3",
    "regex>=2022.9.13",
    "requests>=2.28.1",
    "ruamel.yaml>=0.17.21",
    "selenium>=4.4.3",
    "setuptools>=80.9.0",
    "six>=1.16.0",
    "slack-sdk>=3.19.5",
    "srt>=3.5.2",
    "terminal-layout>=2.1.2",
    "tqdm>=4.64.0",
    "typing_extensions>=4.3.0",
    "undetected-chromedriver>=3.1.7",
    "urllib3>=1.26.12",
    "w3lib>=2.0.1",
    "watchdog>=2.1.9",
    "webdriver-manager>=3.8.5",
    "zhconv>=1.4.3",
]
